[package]
name = "urn"
version = "0.3.4"
edition = "2018"
readme = "README.md"
authors = ["pavlukivan <chayleaf@protonmail.com>"]
description = "A crate for handling URNs (Unique Resource Identifiers)"
repository = "https://github.com/trebuchet-games/urn/"
license = "0BSD OR MIT OR Apache-2.0"
keywords = ["urn", "uri", "iana", "namespace", "parser"]
categories = ["parser-implementations", "web-programming", "encoding"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
serde = { version = "1.0", optional = true, default-features = false, features = ["alloc"] }

[features]
std = []
default = ["std"]

