[package]
name = "urn"
version = "0.6.0-alpha.1"
edition = "2021"
readme = "README.md"
authors = ["chayleaf <chayleaf-cratesio@pavluk.org>"]
description = "A crate for handling URNs (Unique Resource Names)"
repository = "https://github.com/chayleaf/urn/"
license = "0BSD OR MIT OR Apache-2.0"
keywords = ["urn", "uri", "iana", "namespace", "parser"]
categories = ["parser-implementations", "web-programming", "encoding"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies.serde]
version = "1.0"
optional = true
default-features = false

[features]
std = ["alloc"]
default = ["std"]
alloc = ["serde/alloc"]
nightly = []
